--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,160 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-html, body {
-  @apply text-contrast
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+body{
+    background-color: black;
 }
+.css-art2ul-ValueContainer2{
+  background-color: #282C35;
+  color: white !important;
+  padding:0px 0px !important;
+}
+.css-1jqq78o-placeholder{
+  padding:0px 0px !important;
+  background-color: #282C35 !important;
+  border: none !important;
+}
+.css-1u9des2-indicatorSeparator{
+  width: 0px !important;
+}
+.css-w9q2zk-Input2{
+  padding: 0px 0px !important;
+  margin: 0px 0px !important;
+}
+.css-1xc3v61-indicatorContainer{
+  display:none !important;
+}
+.css-1xc3v61-indicatorContainer:hover{
+  display:none !important;
+}
+.css-13cymwt-control{
+ background-color: #282C35 !important;
+ border: none !important;
+ height: 20px !important;
+}
+
+.first-header{
+  color: white;
+}
+.header-and-button{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 920px;
+  padding:30px;
+}
+
+.alls-header{
+  color: white;
+  font-family: 'Inter', sans-serif;
+  margin:0px;
+}
+.first-button {
+  color: white;
+  background-color: #1AB5BC;
+  border: 1px solid #1AB5BC;
+  font-family: 'Inter', sans-serif;
+  border-radius: 5px;
+  padding: 5px 10px;
+ 
+}
+
+.three-card{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap:35px;
+}
+.card{
+    background-color:#383E52;
+    width:354px;
+    height:625px;
+  border: 1px solid;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.first-part{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding:10px 18px;
+    justify-content: space-between;
+}
+.header{
+    size:16px;
+    line-height: 19.36px;
+    weight:500;
+    color: white;
+    margin:0px;
+    font-family: 'Inter', sans-serif;
+    padding-left: 10px;
+}
+.circle{
+  background-color:#1AB5BC;
+  height:8.76px;
+  width:8px;
+  border-radius: 100%;
+}
+.btn-div-inside{
+    color: white;
+    background-color: grey;
+    border: 1px solid grey;
+    border-radius: 5px;
+    height:24px;
+    width:24px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.btn-div{
+  width:24px;
+  height:24px;
+}
+.line{;
+    background-color:#1AB5BC;
+    width:314px;
+    color:#1AB5BC;
+    height:2px;
+    border: 1px solid #1AB5BC;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
+
+.second-part{
+   display: flex;
+   flex-direction: column;
+   gap: 25px;
+   padding: 18px;
+}
+.box{
+    padding:20px 20px;
+    color:white;
+    background-color:#282C35;
+    border: 1px solid #282C35;
+    border-radius: 15px;
+    gap:15px;
+}
+.box-header{
+    display: flex;
+    flex-direction: row;
+}
+.low-priority {
+    color: #FFC895;
+    background-color:#DFA87433;
+    padding:7px 7px;
+    border-radius: 5px;
+    margin-right: 240px;
+  }
+  
+  .high-priority {
+    color:#FB6E6E;
+    background-color: #FB6E6E2E;
+    padding:7px 7px;
+    border-radius: 5px;
+    margin-right: 235px;
+  }
+  .menu{
+    color:white;
+    text-decoration:none;
+  }
